# cargo-matrix

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: error.rs  main.rs
src/config/: mod.rs
src/feature/: matrix.rs  mod.rs  set.rs
src/runtime/: cli.rs  execute.rs  mod.rs
tests/testdata/: .gitignore
tests/testdata/deny/: Cargo.toml
tests/testdata/include/: Cargo.toml
