[package]
name = "sample"
version = "0.0.0"
edition = "2021"

[features]
unstable = []
feat-a = ["feat-b"]
feat-b = ["rand"]
feat-c = ["feat-d"]
feat-d = []
__vergen_test = []

[package.metadata.cargo-matrix]
[[package.metadata.cargo-matrix.channel]]
name = "default"
always_deny = ["feat-d", "unstable"]
include_optional = ["temp-env"]
skip = [["feat-c", "temp-env"]]

[[package.metadata.cargo-matrix.channel]]
name = "nightly"
always_deny = ["feat-d"]
include_optional = []
always_include = ["__vergen_test"]

[[package.metadata.cargo-matrix.channel]]
name = "llvm-cov-empty"
always_deny = ["feat-a", "feat-b", "feat-c", "feat-d", "unstable"]
include_optional = []
always_include = ["__vergen_test"]

[[package.metadata.cargo-matrix.channel]]
name = "llvm-cov"
always_deny = []
include_optional = []
always_include = [
    "__vergen_test",
    "feat-a",
    "feat-b",
    "feat-c",
    "feat-d",
    "unstable",
]

[dependencies]
rand = { version = "0.8.5", optional = true }
temp-env = { version = "0.3.6", optional = true }
